Add Raleway Google font

--- a/app/assets/stylesheets/structure/main.css.scss
+++ b/app/assets/stylesheets/structure/main.css.scss
@@ -1,7 +1,12 @@
-html {
+$font: Raleway;
+
+body {
   background-image: image-url('/assets/beers.jpg');
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
   background-size: cover;
+  font-family: $font;
 }
 
 main {
