Create variables SCSS partial. Styling to splash page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,6 @@
 <div id="landing-box">
-<h1>Flights</h1>
-<p>Here's about us!</p>
-<button>Enter</button>
+<h1>Flight Club</h1>
+<hr>
+<p>Curated samplings of local beverage businesses</p>
+<button>Find a Flight</button>
 </div>
