--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
-<div id="landing-box">
-<h1>Flight Club</h1>
-<hr>
-<p>Curated samplings of local beverage businesses</p>
-<button>Find a Flight</button>
+<div id='landing-box'>
+<%= content_tag(:h1, "SipTrip") %>
+<%= content_tag(:hr) %>
+<%= content_tag(:p, "Curated samplings of local beverage businesses") %>
+<%= content_tag(:button, "Enter") %>
 </div>
