--- a/app/views/flights/search.html.erb
+++ b/app/views/flights/search.html.erb
@@ -1,10 +1,10 @@
-<%= form_for @search, :url => '/search' do |f| %>
+<%= form_for @search, :url => search_results_flights_path do |f| %>
   <%= f.label :location %>
   <%= f.text_field :location %>
   <%= f.label :beverage %>
-  <%= f.select :beverage, options_for_select(@search.beverage) %>
+  <%= f.select :beverage, options_for_select(SearchForm.beverage_options) %>
   <%= f.label :distance_in_miles %>
-  <%= f.select :distance, options_for_select(@search.distance) %>
+  <%= f.select :distance, options_for_select(SearchForm.distance_options) %>
 
   <%= f.submit :submit %>
 <% end %>
