--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
-<div id='landing-box'>
+<div class='gray-box container'>
 <%= content_tag(:h1, "SipTrip") %>
 <%= content_tag(:hr) %>
 <%= content_tag(:p, "Curated samplings of local beverage businesses") %>
-<%= content_tag(:button, "Enter") %>
+<%= link_to(content_tag(:button, "Enter"),'/search') %>
 </div>
