--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,4 +1,4 @@
 <h2>Pick the perfect escape</h2>
 <% @flights.each do |flight| %>
-<!-- Display the flight a a li item in ul -->
+<%= p flight.name %>
 <% end %>
