--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,4 +1,13 @@
 <h2>Pick the perfect escape</h2>
+<ul>
 <% @flights.each do |flight| %>
-<%= p flight.name %>
+<li>
+  <%= flight.name %>
+  <ol>
+  <% flight.businesses.each do |business| %>
+    <li><%= business.name %></li>
+  <% end %>
+  </ol>
+</li>
 <% end %>
+</ul>
