--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -1,7 +1,8 @@
 <header class="row">
   <h1>SipTrip</h1>
 </header>
-
+<%= content_tag "div", id: "businesses", data: {url: Business.first} do %>
+<% end %>
 <div class="row">
   <div class="col gutters-d span-8-d" id="map-container">
     <div id="map-canvas">
@@ -11,6 +12,11 @@
 
   <div class="col gutters-d span-4-d" id="business-list">
   <h1>This is a business list</h1>
+  <h2><%= @business.name %></h2>
+  <p><%= @business.location %></p>
+  <p>Rating: <%= @business.rating %></p>
+  <p>Latitude: <%= @business.latitude %></p>
+  <p>Longitude: <%= @business.longitude %></p>
   </div>
 </div>
 
