Add links to search results page, need to be fixed

--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -2,7 +2,7 @@
 <ul>
 <% @flights.each do |flight| %>
 <li>
-  <%= flight.name %>
+  <%= link_to flight.name, flight_path(flight) %>
   <ol>
   <% flight.businesses.each do |business| %>
     <li><%= business.name %></li>
