--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -3,7 +3,7 @@
 <ul>
 <% @flights.each do |flight| %>
 <li>
-  <%= flight.name %>
+  <%= link_to flight.name, flight %>
   <ol>
   <% flight.businesses.each do |business| %>
     <li><%= business.name %></li>
