--- a/app/assets/stylesheets/partials/_map.css.scss
+++ b/app/assets/stylesheets/partials/_map.css.scss
@@ -1,16 +1,12 @@
 #map-container {
    border-radius: 10px 10px;
-   border-color: #fff;
+   border-color: rgba(200, 200, 200, 0.8);
    border-style: solid;
-   box-shadow: 2px 2px 10px #B1B1B1;
-   border-width: 7px;
+  //  box-shadow: 2px 2px 10px #B1B1B1;
+   border-width: 10px;
  }
 
  #map-canvas {
   height: 400px;
   width: 100%;
- }
-
- #business-list {
-  background-color: #fff;
  }
