--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
-<h2>Pick the perfect escape</h2>
-<ul>
-<% @flights.each do |flight| %>
-<li>
-  <%= link_to flight.name, flight %>
-  <ol>
-  <% flight.businesses.each do |business| %>
-    <li><%= business.name %></li>
+  <h2>Pick the perfect escape</h2>
+  <ul>
+  <% @flights.each do |flight| %>
+  <li class="col gutters-d span-12-d">
+    <%= link_to flight.name, flight %>
+    <ol>
+    <% flight.businesses.each do |business| %>
+      <li><%= business.name %></li>
+    <% end %>
+    </ol>
+  </li>
   <% end %>
-  </ol>
-</li>
-<% end %>
-</ul>
+  </ul>
 </div>
