Working on styling the page that displayes map
  - Add JS code inorder to have a map the same height as a blist of businesses next to it.
  - JS works once you reload a page.
  - Need to figure out how to make sure JS is loading when we get on a page by doing a get request

--- a/app/assets/stylesheets/partials/_mappage.css.scss
+++ b/app/assets/stylesheets/partials/_mappage.css.scss
@@ -1,8 +1,7 @@
-#map-container {
+#map-container, #business-list {
    border-radius: 10px 10px;
    border-color: rgba(200, 200, 200, 0.8);
    border-style: solid;
-  //  box-shadow: 2px 2px 10px #B1B1B1;
    border-width: 10px;
  }
 
@@ -10,3 +9,12 @@
   height: 400px;
   width: 100%;
  }
+
+#business-list {
+  padding: 0;
+}
+
+#business-list p {
+  text-align: left;
+  padding-left: 5%;
+}
