--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -3,7 +3,7 @@
 </header>
 <%= content_tag "div", id: "businesses", data: {url: @flight.businesses} do %>
 <% end %>
-<div class="row">
+<div class="row" id='map-list-block'>
   <div class="col gutters-d span-8-d" id="map-container">
     <div id="map-canvas">
 
@@ -11,7 +11,7 @@
   </div>
 
   <div class="col gutters-d span-4-d gray-box" id="business-list">
-  <h1>This is a business list</h1>
+  <h1><%= @flight.theme.capitalize %> flight</h1>
   <% @flight.businesses.each do |business| %>
     <h2><%= business.name %></h2>
     <p><%= business.location %></p>
