Add footer to the layout of the app, styled the footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </main>
 
   <footer class="row">
-    <p>This is a footer</p>
+    <p>Copyright © <%= Date.today.year %> DBC Huskies · All Rights Reserved</p>
   </footer>
 </body>
 </html>
