--- a/app/assets/stylesheets/structure/main.css.scss
+++ b/app/assets/stylesheets/structure/main.css.scss
@@ -10,4 +10,16 @@ body {
   font-family: $font;
 }
 
+main {
+  position: relative;
+  height: 100%;
+}
 
+footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 60px;
+  width: 100%;
+}
