Add style to the header and homepage to reflet grid pattern
  - Add header partial
  - Add logic to hide header on the homepage and display on the rest of the site
  - Change css of the grey box to reflect the grid system (from px to grid)
  - Style the homepage. Cox is shown in the iddle of the page.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,8 @@
-<div class='gray-box container'>
-<%= content_tag(:h1, "SipTrip") %>
-<%= content_tag(:hr) %>
-<%= content_tag(:p, "Curated samplings of local beverage businesses") %>
-<%= link_to(content_tag(:button, "Enter"),'/search') %>
+<div id='homepage' class="col row gutters-d span-12-d">
+  <div class='gray-box' id='homepage-box'>
+  <%= content_tag(:h1, "SipTrip") %>
+  <%= content_tag(:hr) %>
+  <%= content_tag(:p, "Curated samplings of local beverage businesses") %>
+  <%= link_to(content_tag(:button, "Enter"),'/search') %>
+  </div>
 </div>
