--- a/app/views/flights/search.html.erb
+++ b/app/views/flights/search.html.erb
@@ -1,8 +1,4 @@
-<header class="row">
-  <h1>SipTrip</h1>
-</header>
-
-<div class="row">
+<div class="row col gutters-d span-12-d">
   <div class='gray-box'>
   <%= content_tag(:h2, 'Curate Flights') %>
   <hr>
