--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body class='container'>
+  <%= render "layouts/header" unless @skip_header %>
+  
   <main>
     <%= yield %>
   </main>
