Delete Search Controller, not beign used

--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -3,7 +3,8 @@
   <ul class="flight-name">
   <h2><% @flights.each do |flight| %></h2>
   <li class="left-list-item">
-    <%= link_to flight.name, flight %>
+  <%= flight.id %>
+    <%= link_to flight.name, "/flights/#{flight.id}" %>
     <ol>
     <% flight.businesses.each do |business| %>
       <li><%= business.name %></li>
