--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,6 +3,6 @@
   <%= content_tag(:h1, "SipTrip") %>
   <%= content_tag(:hr) %>
   <%= content_tag(:p, "Curated samplings of local beverage businesses") %>
-  <%= link_to(content_tag(:button, "Enter"), flights_search_path) %>
+  <%= link_to(content_tag(:button, "Enter"), search_flights_path) %>
   </div>
 </div>
