--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body class='container'>
-  <%= render "layouts/header" unless @skip_header %>
+  <%= render "layouts/header"%>
 
   <main>
     <%= yield %>
