Add submitCurateFLight ajax call function. Successful submition works fine except the footer. Submition with errors has not been implemented yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
   <%= render "layouts/header"%>
 
   <main>
-    <%= yield %>
+      <%= yield %>
+    <div id='end-of-main' class='row'></div>
   </main>
 
   <footer class="row">
