--- a/app/views/flights/search.html.erb
+++ b/app/views/flights/search.html.erb
@@ -1,8 +1,8 @@
-<div class="row col gutters-d span-12-d">
+<div class="row col gutters-d span-12-d" id='search'>
   <div class='gray-box'>
   <%= content_tag(:h2, 'Curate Flights') %>
   <hr>
-  
+
   <% if !@errors.blank? %>
     <ul><% @errors.each do |key, error_message| %>
       <li><%= error_message %></li>
