Working on the single page layout
  - Add a lest page mock-up
  - Add routing for the test page mock-up
  - Changed the css styling across the site, not complete
  - Delete the container class for the body
  - Changed the content of the page views in order to reflect new one-page-site architecture

--- a/app/assets/stylesheets/structure/main.css.scss
+++ b/app/assets/stylesheets/structure/main.css.scss
@@ -22,9 +22,41 @@ footer {
   left: 0;
   height: 60px;
   width: 100%;
+  background-color: #D2A430;
   position: fixed;
 }
 
 .hidden {
   display: none;
 }
+
+
+.clearfix:after {
+  content:" ";
+  display:block;
+  clear:both;
+}
+
+.section {
+  min-height: 1600px;
+}
+
+.centered {
+  padding-top: 6em;
+  margin: 0 auto;
+  width: 35em;
+}
+
+.box {
+  background-color: rgba(200, 200, 200, 0.6);
+  border-radius: 15px;
+  padding:15px;
+  margin: 15px;
+}
+
+@media (min-width: 75em) {
+    .centered.large {
+        width: 65em; /* 720px */
+    }
+}
+
