--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -6,8 +6,14 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
 
-    <%= f.label :location %>
-    <%= f.text_field :location %>
+    <%= f.label :street_address %>
+    <%= f.text_field :street_address %>
+
+    <%= f.label :city %>
+    <%= f.text_field :city %>
+
+    <%= f.label :state %>
+    <%= f.text_field :state %>
 
     <%= f.label :beverage %>
     <%= f.select :beverage, options_for_select(Business.beverage_options) %>
