--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -6,14 +6,14 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
 
-    <%= f.label :street_address %>
-    <%= f.text_field :street_address %>
+    <%= f.label :street %>
+    <%= f.text_field :street %>
 
     <%= f.label :city %>
     <%= f.text_field :city %>
 
     <%= f.label :state %>
-    <%= f.text_field :state %>
+    <%= select_tag :state, options_for_select(us_states) %>
 
     <%= f.label :beverage %>
     <%= f.select :beverage, options_for_select(Business.beverage_options) %>
