--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,10 @@
 <div id='homepage' class="col row gutters-d span-12-d">
-  <div class='gray-box' id='homepage-box'>
-  <%= content_tag(:h1, "SipTrip") %>
-  <%= content_tag(:hr) %>
-  <%= content_tag(:p, "Curated samplings of local beverage businesses") %>
-  <%= link_to(content_tag(:button, "Enter"), search_flights_path) %>
+  <div class='box' id='homepage-box'>
+    <div id='homepage-box-content'>
+      <%= content_tag(:h1, "SipTrip") %>
+      <%= content_tag(:hr) %>
+      <%= content_tag(:p, "Curated samplings of local beverage businesses") %>
+      <%= link_to(content_tag(:button, "Enter"), search_flights_path) %>
+    </div>
   </div>
 </div>
