--- a/app/assets/stylesheets/partials/_homepage.css.scss
+++ b/app/assets/stylesheets/partials/_homepage.css.scss
@@ -6,9 +6,22 @@
 
 #homepage-box {
   align-self: center;
-  margin-bottom: 5%; 
+  margin-bottom: 5%;
 }
 
 html {
   height: 100%;
 }
+
+#homepage-box-content {
+  margin-top: 15%;
+}
+
+@media (min-width: 75em) {
+    #homepage-box {
+      width: 35%;
+      height: 35%;
+    }
+}
+
+
