--- a/app/assets/stylesheets/partials/_box.css.scss
+++ b/app/assets/stylesheets/partials/_box.css.scss
@@ -1,17 +1,4 @@
-
-.gray-box {
-  width: 40%;
-  padding: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  background-color: rgba(200, 200, 200, 0.6);
-  border-radius: 15px;
-
-
-}
-
-#homepage-box {
+#homepage-box, #search, #search-results-box {
   text-align: center;
 
   hr {
