--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
   <h1>SipTrip</h1>
   <div>
   <% if session[:user_id] %>
-    <%= link_to "profile" %>
-    <%= link_to "logout", session_path, method: :delete %>
+    <%= link_to "profile", user_path(session[:user_id]) %>
+    <%= link_to "logout", session_path(session[:user_id]), method: :delete %>
   <% else %>
     <%= link_to "register", new_user_path %>
     <%= link_to "login", new_session_path %>
