Add a bunch of missing controller and model spec files

--- a/app/assets/stylesheets/structure/main.css.scss
+++ b/app/assets/stylesheets/structure/main.css.scss
@@ -16,6 +16,10 @@ main {
   height: 100%;
 }
 
+header {
+ background-color: rgba(200, 200, 200, .6);
+}
+
 footer {
   text-align: center;
   bottom: 0;
