--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="row <%= @skip_header ? 'hidden' : '' %>">
   <h1>SipTrip</h1>
-  <div>
+  <div id="navigation">
   <% if session[:user_id] %>
     <%= link_to "profile", user_path(session[:user_id]) %>
     <%= link_to "logout", session_path(session[:user_id]), method: :delete %>
