--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,3 +20,13 @@
   font-size: .75em;
   font-weight: bold;
 }
+
+.form-field p {
+  margin-top: .5em;
+  margin-bottom: 1em;
+  padding: 0px;
+}
+
+.form-field input {
+  margin-bottom: 0px;
+}
