--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -3,34 +3,39 @@
   <p>Where do you like to go for a glass of wine, a cold beer, your favorite whiskey or relax with coffee? Provide the details for your favorite local establishments and they will be available for others as they create their own SipTrips.</p>
 
   <%= form_for @business do |f| %>
-
     <% if @business.errors.any? %>
-      <div class='error-messages'>
-        <h3>
-          Please correct all errors listed below and try submitting again.
-        </h3>
-        <ul>
-          <% @business.errors.full_messages.each do |message| %>
-            <li class='errors'><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
+      <h3>
+        Please correct all errors listed below and try submitting again.
+      </h3>
     <% end %>
 
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <div class='form-field'>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+      <p class='errors'><%= show_errors(@business, :name) %></p>
+    </div>
 
-    <%= f.label :street %>
-    <%= f.text_field :street %>
+    <div class='form-field'>
+      <%= f.label :street %>
+      <%= f.text_field :street %>
+      <p class='errors'><%= show_errors(@business, :street) %></p>
+    </div>
 
-    <%= f.label :city %>
-    <%= f.text_field :city %>
+    <div class='form-field'>
+      <%= f.label :city %>
+      <%= f.text_field :city %>
+      <p class='errors'><%= show_errors(@business, :city) %></p>
+    </div>
 
-    <%= f.label :state %>
-    <%= f.select :state, options_for_select(state_options) %>
+    <div class='form-field'>
+      <%= f.label :state %>
+      <%= f.select :state, options_for_select(state_options) %>
+    </div>
 
-    <%= f.label :beverage %>
-    <%= f.select :beverage, options_for_select(Business.beverage_options) %>
+    <div class='form-field'>
+      <%= f.label :beverage %>
+      <%= f.select :beverage, options_for_select(Business.beverage_options) %>
+    </div>
 
     <%= content_tag(:button, "Submit") %>
   <% end %>
