Have details to play with for show page of businesses.

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,7 @@
 <p>Hello World</p>
-<PRE>
-<%= JSON.pretty_generate @details %>
-</PRE>
+<div>
+<%= @details.inspect %>
+
+<%= @details.formatted_phone_number %>
+
+</div>
