--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,6 +1,5 @@
 <div class='section container'>
   <div class='centered'>
-<% @details.inspect %>
     <div class='box'>
       <h2><%= @business.name %></h2>
       <h3>Neighborhood: <%= @details.address_components[2]["long_name"] %></h3>
@@ -13,10 +12,13 @@
       <p>
         <ul>
           <% @details.opening_hours["weekday_text"].each do |weekday_hours| %>
-            <li><%= weekday_hours %></li>
+            <li><%= weekday_hours  %></li>
           <% end %>
         </ul>
       </p>
+      <div class="business-image">
+        <img src="<%= @details.photos[0].fetch_url(150) %>" >
+      </div>
     </div>
   </div>
 </div>
