Initial commit on new branch

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
 
         <h2>Welcome, <%= @user.username %></h2>
           <%= link_to "add business", new_business_path %>
+          <%= link_to "add rating", new_rating_path %>
       </div>
     </div>
   </div>
