initial commit. User can see their flights on profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,20 @@
 
         <h2>Welcome, <%= @user.username %></h2>
           <%= link_to "add business", new_business_path %>
+
+
+
+
+
+
+
+
+        <h3>Saved Flights</h3>
+        <ul>
+        <% @user.flights.each do |flight| %>
+          <li><%= flight.name %></li>
+        <% end %>
+        </ul>
       </div>
     </div>
   </div>
