--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -16,7 +16,7 @@
       <div class='col span-12-t span-4-d'>
         <div id="business-listings" class="box">
           <h1><%= @flight.theme.capitalize %> flight</h1>
-          <% if session[:user_id] != nil %>
+          <% if user_logged_in_and_no_bookmark(@flight) %>
             <p><%= link_to "Bookmark this flight", bookmark_flight_path(@flight) %></p>
           <% end %>
           <% @flight.businesses.each do |business| %>
