--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,38 +1,47 @@
 <div class='section container'>
   <div class='centered'>
+  <% @details.inspect %>
     <div class='box'>
 
       <% if flash[:notice] %>
         <%= flash[:notice] %>
       <% end %>
 
-      <h2><%= @business.name %></h2>
-      <h3>Neighborhood: <%= @details.address_components[2]["long_name"] %></h3>
-      <p>
-        <%= @details.formatted_address.split(',')[0] %></br>
-        <%= @details.formatted_address.split(',')[1] %>, <%= @details.formatted_address.split(',')[2] %>
-      </p>
-      <p><%= @details.formatted_phone_number %></p>
-      <% if @details.website == nil %>
-      <% else %>
-        <p><%= link_to "Website", @details.website, target: "_blank", rel: "nofollow" %></p>
+      <% unless @details.photos[0] == nil %>
+        <img class="business-image" src="<%= @details.photos[0].fetch_url(150) %>" >
       <% end %>
-      <p>
-        <ul>
-          <% if @details.opening_hours == nil %>
+
+      <h2><%= @business.name %></h2>
+      <% if @details == nil %>
+      <% else %>
+
+
+
+        <h3>Neighborhood: <%= @details.address_components[2]["long_name"] %></h3>
+
+          <p>
+            <%= @details.formatted_address.split(',')[0] %></br>
+            <%= @details.formatted_address.split(',')[1] %>, <%= @details.formatted_address.split(',')[2] %>
+          </p>
+          <p><%= @details.formatted_phone_number %></p>
+
+          <% if @details.website == nil %>
           <% else %>
-            <% @details.opening_hours["weekday_text"].each do |weekday_hours| %>
-              <li><%= weekday_hours  %></li>
-            <% end %>
+            <p><%= link_to "Website", @details.website, target: "_blank", rel: "nofollow" %></p>
           <% end %>
-        </ul>
-      </p>
-      <div class="business-image">
-        <% if @details.photos[0] == nil %>
-        <% else %>
-          <img src="<%= @details.photos[0].fetch_url(150) %>" >
-        <% end %>
-      </div>
+          <div class="business-hours">
+            <ul>
+              <% if @details.opening_hours == nil %>
+              <% else %>
+                <% @details.opening_hours["weekday_text"].each do |weekday_hours| %>
+                  <li><%= weekday_hours  %></li>
+                <% end %>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+
+      <% end %>
     </div>
   </div>
 </div>
