--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,11 +17,12 @@
   font-size: .75em;
   font-weight: bold;
   text-align: center;
+
+  li {
+    list-style-type: none;
+  }
 }
 
-.business-hours li {
-  list-style-type: none;
-}
 
 .business-image {
   float: right;
