--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,13 +1,16 @@
 <div class='section container'>
   <div class='centered'>
+
     <div class='box'>
 
       <% if flash[:notice] %>
         <%= flash[:notice] %>
       <% end %>
 
-      <% unless @details.photos[0] == nil %>
-        <img class="business-image" src="<%= @details.photos[0].fetch_url(150) %>" >
+      <% if @details && !@details.photos.empty? %>
+        <% unless @details.photos[0] == nil %>
+          <img class="business-image" src="<%= @details.photos[0].fetch_url(150) %>" >
+        <% end %>
       <% end %>
 
       <h2><%= @business.name %></h2>
