--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -3,7 +3,7 @@
     <div class="" id='business-form'>
       <div class='box'>
         <h2>Add a business to our growing list</h2>
-        <p>Where do you like to go for a glass of wine, a cold beer, your favorite whiskey or relax with coffee? Provide the details for your favorite local establishments and they will be available for others as they create their own SipTrips.</p>
+        <p>Where do you like to go for a glass of wine, a cold beer, your favorite distillery or relax with coffee? Provide the details for your favorite local establishments and they will be available for others as they create their own SipTrips.</p>
 
         <%= form_for @business do |f| %>
           <% if @business.errors.any? %>
