--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -43,7 +43,7 @@
         </div>
       <% end %>
       <div class="image-container">
-        <img class="google-power-image" src="/assets/powered_by_google_on_white.png" >
+        <img src="/assets/powered_by_google_on_white.png" >
       </div>
     </div>
   </div>
