--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     </main>
 
     <footer class="row">
-      <p>Copyright © <%= Date.today.year %> DBC Huskies · All Rights Reserved</p>
+      <p>Copyright © <%= Date.today.year %> DBC Huskies &nbsp;|&nbsp; All Rights Reserved</p>
     </footer>
   </body>
 </html>
