--- a/app/assets/stylesheets/structure/main.scss
+++ b/app/assets/stylesheets/structure/main.scss
@@ -17,7 +17,7 @@ main {
 }
 
 header {
- background-color: rgba(200, 200, 200, .6);
+ background-color: rgba(200, 200, 200, .8);
 }
 
 footer {
@@ -26,7 +26,8 @@ footer {
   left: 0;
   height: 60px;
   width: 100%;
-  background-color: #D2A430;
+  background-color: #542e4d;
+  color: rgba(200, 200, 200, .8);
   position: fixed;
 }
 
