--- a/app/assets/stylesheets/structure/main.scss
+++ b/app/assets/stylesheets/structure/main.scss
@@ -8,6 +8,8 @@ body {
   background-position: center center;
   background-size: cover;
   font-family: $font;
+  color: #232728;
+  letter-spacing: .06em;
   height: 100%;
 }
 
