Addressed the browser history and going back in history issue
  - Add pushBrowserHistory function
  - Re factored every method that had and AJAX call to reflect the use of pushBrowserHistory function
  - Fix the adjusting map height on the going back in history. Function works all the time now (put it inside document ready)
  - Changed the logic behind adding the partials into the main page once we hit the search button: turned search_results into results partial that is now been displayed in search_results
  - Change flights controller spec test to reflect new partials naming

--- a/app/views/flights/search.html.erb
+++ b/app/views/flights/search.html.erb
@@ -28,5 +28,9 @@
   </div>
 </div>
 
-<div id="search-results-container"></div>
+<div id="search-results-container">
+  <% unless @flights.nil? %>
+    <%= render :partial => 'results', :locals =>{ :flights => @flights } %>
+  <% end %>
+</div>
 <div id="business-results-container"></div>
