--- a/app/views/flights/search_results.html.erb
+++ b/app/views/flights/search_results.html.erb
@@ -1,28 +1,1 @@
-<div class='section container' id='search-results-section'>
-  <div class='centered'>
-
-    <div class="box" id="search-results-box">
-
-      <% if @flights.length == 0 %>
-        <h2>We currently have no flights available in your region</h2>
-        <p>We are currently in the process of expanding our list of businesses to include those in areas outside of Seattle. Stay tuned and check back frequently to see if businesses and flights are available in your region.</p>
-      <% else %>
-        <h2>Pick the perfect escape</h2>
-          <ul class="flight-name">
-            <h2><% @flights.each do |flight| %></h2>
-            <li class="left-list-item">
-              <%= link_to flight.name, flight %>
-                <ol>
-                  <% flight.businesses.each do |business| %>
-                    <li><%= business.name %></li>
-                  <% end %>
-                </ol>
-              </li>
-            <% end %>
-          </ul>
-      <% end %>
-
-    </div>
-
-  </div>
-</div>
+<%= render :partial => 'results', :locals =>{ :flights => @flights } %>
