--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -14,14 +14,16 @@
 
       <div class='col span-12-t span-4-d'>
         <div id="business-listings" class="box">
-          <h1><%= @flight.theme.capitalize %> flight</h1>
+          <h1><%= @flight.theme.capitalize %> Flights</h1>
           <% if user_logged_in_and_no_bookmark(@flight) %>
             <p><%= link_to "Bookmark this flight", bookmark_flight_path(@flight) %></p>
           <% end %>
           <% @flight.businesses.each do |business| %>
             <h2><%= link_to business.name, business_path(business) %></h2>
-            <p><%= business.location %></p>
-            <p>Rating: <%= business.average_rating %></p>
+            <ul class="flight-name">
+              <li class="left-list-item"><%= business.location %></li>
+              <li class="left-list-item">Rating: <%= business.average_rating %></li>
+            </ul>
           <% end %>
         </div>
        </div>
